Fix Rubric/Mixeval add/edit textareas overflow.
Broken due to new css applied to all textareas. Width in rubric really
should be done in the css file instead when the page is refactored.

--- a/app/webroot/css/ipeer.css
+++ b/app/webroot/css/ipeer.css
@@ -1374,7 +1374,7 @@ table.content-table {
 }
 
 textarea.question-title-textarea, textarea.question-descriptor {
-    width: 100%;
+    width: 90%;
     height: 4em; 
 }
 
